[TTG] add review api
