# routes/review.router.js
@@ -4,6 +4,9 @@ const router = express.Router();
 const review = require('../controllers/review.controller');
 const validate = require('../middlewares/authenticate')
 
-router.post('/:movieId', validate, review.createReview)
+router.post('/:title', validate, review.createReview)
+router.get('/:title', review.getReview)
+router.put('/:title', validate, review.updateReview)
+router.delete('/:title', validate, review.deleteReview)
 
 module.exports = router;
